# newsrag

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  Procfile.dev  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
.pi/skills/release/: SKILL.md
docs/: CONTRIBUTING.md  architecture.md  development.md
docs/plans/: 01-cli-config-doctor.md  02-corpus-storage-lifecycle.md  03-daemon-job-queue.md  04-watch-folder-ingestion.md  05-local-pdf-ingest-e2e.md  06-url-ingest-e2e.md  07-yaml-manifest-ingest.md  08-embedding-providers.md  09-hybrid-search-citations.md  10-search-metadata-filters.md  11-markdown-source-packets.md  12-job-failure-retry.md  13-pdfplumber-fallback.md  14-watcher-debounce-health.md  15-backlog-conversion.md  README.md
docs/research/: README.md  city-hall-pdf-rag.md  deep-research-report.md  discovery-oriented-ingestion-enrichment.md  rag-overview.md  recommended-stack.md
newsrag/: __init__.py  briefs.py  cli.py  config.py  daemon.py  discovery.py  discovery_browse.py  doctor.py  documents.py  embeddings.py  enrichment.py  facts.py  ingest.py  jobs.py  manifests.py  packets.py  passages.py  search.py  storage.py  watches.py
scripts/: dev-placeholder.sh  install.sh  pre-pr.sh
tests/: test_briefs.py  test_cli.py  test_config.py  test_daemon.py  test_discovery.py  test_discovery_browse.py  test_doctor.py  test_documents.py  test_embeddings.py  test_enrichment.py  test_facts.py  test_ingest.py  test_install_script.py  test_packets.py  test_search.py  test_storage.py  test_watches.py
(+1 files in other folders)
